src/objects/CMC_Estimate_Resource_Week__c.object
<CustomObject>
    <fields>
        <fullName>Estimate_Resource__c</fullName>
        <label>Estimate Resource</label>
        <referenceTo>CMC_Estimate_Resource__c</referenceTo>
        <relationshipName>Estimate_Resource_Weeks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Estimate_Week__c</fullName>
        <label>Estimate Week</label>
        <referenceTo>CMC_Estimate_Week__c</referenceTo>
        <relationshipName>Estimate_Resource_Weeks</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Estimate Resource Week</label>
    <nameField>
        <displayFormat>ERW-{00000}</displayFormat>
        <label>CMC Estimate Resource Week Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Estimate Resource Weeks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>